--- a/prom-monitor/hosts.ini
+++ b/prom-monitor/hosts.ini
@@ -1,18 +1,50 @@
-[all]
+[all1]
 us-01	ansible_ssh_host=10.1.1.11
 us-02	ansible_ssh_host=10.1.1.13
 us-03	ansible_ssh_host=10.1.1.14
-node1	ansible_ssh_host=192.168.3.134
+
+[alls]
+e1.etcd.k8s.aipp.io     ansible_ssh_host=10.10.80.70
+e2.etcd.k8s.aipp.io     ansible_ssh_host=10.10.80.71
+e3.etcd.k8s.aipp.io     ansible_ssh_host=10.10.80.72
+
+m1.master.k8s.aipp.io   ansible_ssh_host=10.10.80.68
+m2.master.k8s.aipp.io   ansible_ssh_host=10.10.80.69
+
+n1-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.73
+n2-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.74
+n3-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.75
+
+n1-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.76
+n2-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.77
+n3-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.78
+
+ml1-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.79
+ml2-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.80
+ml3-dev.node.k8s.aipp.io     ansible_ssh_host=10.10.80.81
+
+ml1-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.82
+ml2-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.83
+ml3-prod.node.k8s.aipp.io     ansible_ssh_host=10.10.80.84
+
+[node-exporter]
+us-01
+us-02
+us-03
+
+[prom-server]
+us-01
 
 [kube-master]
 node1
 
 [all:vars]
 target_name=node_exporter
+#target_name=prometheus
 target_version=0.16.0
+#target_version=2.3.2
 work_path=/prom
 kube_yaml_path="{{ work_path }}/yaml"
-node_exporter_path="{{ work_path }}/node_exporter"
 systemd_path=/etc/systemd/system
 
 prometheus_domain=prometheus.yud.io
