--- a/prom-monitor/hosts.ini
+++ b/prom-monitor/hosts.ini
@@ -1,7 +1,7 @@
 [all1]
-us-01	ansible_ssh_host=10.1.1.11
-us-02	ansible_ssh_host=10.1.1.13
-us-03	ansible_ssh_host=10.1.1.14
+us-01	ansible_host=10.1.1.11
+us-02	ansible_host=10.1.1.13
+us-03	ansible_host=10.1.1.14
 
 [alls]
 e1.etcd.k8s.aipp.io     ansible_ssh_host=10.10.80.70
@@ -33,16 +33,16 @@ us-02
 us-03
 
 [prom-server]
-us-01
+us-02
 
 [kube-master]
 node1
 
 [all:vars]
-target_name=node_exporter
-#target_name=prometheus
-target_version=0.16.0
-#target_version=2.3.2
+#target_name=node_exporter
+target_name=prometheus
+#target_version=0.16.0
+target_version=2.3.2
 work_path=/prom
 kube_yaml_path="{{ work_path }}/yaml"
 systemd_path=/etc/systemd/system
