--- a/prom-monitor/test.yml
+++ b/prom-monitor/test.yml
@@ -1,6 +1,8 @@
 - hosts: all1
   remote_user: root
   tasks:
+  - name: ping
+    ping:
   - name: "test"
     template:
       src: /home/mh/Documents/plko345/ansible/prom-monitor/prometheus.yml.j2
